objects/adapps__OptimizerPlus_News_And_Twitter__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Feature_Type__c</fullName>
        <label>Feature Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Feature</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Implementation_Effort__c</fullName>
        <label>Implementation Effort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Implementation_Effort</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Optimizer_Report__c</fullName>
        <label>Optimizer Report</label>
        <referenceTo>adapps__Optimizer_Report__c</referenceTo>
        <relationshipLabel>News And Twitter</relationshipLabel>
        <relationshipName>News_And_Twitter</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Org_Item_Count__c</fullName>
        <label>Org Item Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Status</valueSetName>
        </valueSet>
    </fields>
    <label>News and Twitter</label>
    <nameField>
        <label>News and Twitter</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News and Twitter</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>